VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc8Down.err
[8MB/454.8MB][  1%][>                                                 ][2.667MB/s]  [16MB/454.8MB][  3%][=>                                                ][4MB/s]  [24MB/454.8MB][  5%][==>                                               ][4MB/s]  [32MB/454.8MB][  7%][===>                                              ][4MB/s]  [40MB/454.8MB][  8%][====>                                             ][3.333MB/s]  [48MB/454.8MB][ 10%][=====>                                            ][2.526MB/s]  [56MB/454.8MB][ 12%][======>                                           ][2.333MB/s]  [64MB/454.8MB][ 14%][=======>                                          ][2.37MB/s]  [72MB/454.8MB][ 15%][=======>                                          ][2.4MB/s]  [80MB/454.8MB][ 17%][========>                                         ][2.353MB/s]  [88MB/454.8MB][ 19%][=========>                                        ][2.256MB/s]  [96MB/454.8MB][ 21%][==========>                                       ][2.233MB/s]  [104MB/454.8MB][ 22%][===========>                                      ][2.261MB/s]  [112MB/454.8MB][ 24%][============>                                     ][2.333MB/s]  [120MB/454.8MB][ 26%][=============>                                    ][2.353MB/s]  [128MB/454.8MB][ 28%][==============>                                   ][2.37MB/s]  [136MB/454.8MB][ 29%][==============>                                   ][2.386MB/s]  [144MB/454.8MB][ 31%][===============>                                  ][2.361MB/s]  [152MB/454.8MB][ 33%][================>                                 ][2.303MB/s]  [160MB/454.8MB][ 35%][=================>                                ][2.254MB/s]  [168MB/454.8MB][ 36%][==================>                               ][2.27MB/s]  [176MB/454.8MB][ 38%][===================>                              ][2.256MB/s]  [184MB/454.8MB][ 40%][====================>                             ][2.244MB/s]  [192MB/454.8MB][ 42%][=====================>                            ][2.207MB/s]  [200MB/454.8MB][ 43%][=====================>                            ][2.105MB/s]  [208MB/454.8MB][ 45%][======================>                           ][2.059MB/s]  [216MB/454.8MB][ 47%][=======================>                          ][2.077MB/s]  [224MB/454.8MB][ 49%][========================>                         ][2.113MB/s]  [232MB/454.8MB][ 51%][=========================>                        ][2.148MB/s]  [240MB/454.8MB][ 52%][==========================>                       ][2.162MB/s]  [248MB/454.8MB][ 54%][===========================>                      ][2.157MB/s]  [256MB/454.8MB][ 56%][============================>                     ][2.098MB/s]  [264MB/454.8MB][ 58%][=============================>                    ][2.062MB/s]  [272MB/454.8MB][ 59%][=============================>                    ][2.045MB/s]  [280MB/454.8MB][ 61%][==============================>                   ][2.029MB/s]  [288MB/454.8MB][ 63%][===============================>                  ][2MB/s]  [296MB/454.8MB][ 65%][================================>                 ][1.96MB/s]  [304MB/454.8MB][ 66%][=================================>                ][1.9MB/s]  [312MB/454.8MB][ 68%][==================================>               ][1.891MB/s]  [320MB/454.8MB][ 70%][===================================>              ][1.893MB/s]  [328MB/454.8MB][ 72%][====================================>             ][1.918MB/s]  [336MB/454.8MB][ 73%][====================================>             ][1.942MB/s]  [344MB/454.8MB][ 75%][=====================================>            ][1.977MB/s]  [352MB/454.8MB][ 77%][======================================>           ][2MB/s]  [360MB/454.8MB][ 79%][=======================================>          ][2.034MB/s]  [368MB/454.8MB][ 80%][========================================>         ][2.044MB/s]  [376MB/454.8MB][ 82%][=========================================>        ][2.043MB/s]  [384MB/454.8MB][ 84%][==========================================>       ][2.032MB/s]  [392MB/454.8MB][ 86%][===========================================>      ][2.01MB/s]  [400MB/454.8MB][ 87%][===========================================>      ][2.01MB/s]  [408MB/454.8MB][ 89%][============================================>     ][2.03MB/s]  [416MB/454.8MB][ 91%][=============================================>    ][2.039MB/s]  [424MB/454.8MB][ 93%][==============================================>   ][2.029MB/s]  [432MB/454.8MB][ 94%][===============================================>  ][2.019MB/s]  [440MB/454.8MB][ 96%][================================================> ][2.009MB/s]  [448MB/454.8MB][ 98%][=================================================>][2.009MB/s]  [454.8MB/454.8MB][100%][==================================================][2.021MB/s]  [454.8MB/454.8MB][100%][==================================================][2.021MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_19220/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_19220/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
